Fix timetable background, no white space around

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
     background-color: #F8F4EC;
 }
 
+table {
+    z-index: 3;
+}
+
 th {
     font-family: 'DM Serif Display', serif;
 }
