--- a/src/components/Timetable/timetable.module.css
+++ b/src/components/Timetable/timetable.module.css
@@ -13,10 +13,6 @@
     height: 49px;
 }
 
-/* .td {
-    width: 49px;
-} */
-
 .th {
     border: solid 0.5px black;
     height: 11px;
@@ -36,7 +32,6 @@
 }
 
 .center {
-    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
